<resources>
    <string name="app_name">智能矿工</string>
    <string name="p_a">￥</string>
    <string name="p_b">￥ 0.00</string>
    <string name="good_count">x %d</string>
    <string name="price">￥0.00</string>
    <string name="total_1">合计：</string>
    <string name="ac_0">结算(0)</string>

    <string name="pwd">输入密码</string>
    <string name="forgot_pwd">忘记密码？</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_0">0</string>
    <string name="About_us_top"> \"智能矿工\"是由广州算力云区块链科技有限公司自主研发的一款矿场管理软件，是一款为矿场管理量身打造的智能化管理平台。该平台的推出改变了传统的管理模式，实现设备可视化、人员管理智能化、计费透明化。</string>
    <string name="reg_name">姓\u3000\u3000\u3000名：</string>
    <string name="reg_tell">手\u3000机\u3000号：</string>
    <string name="reg_tag_1">第一识别码：</string>
    <string name="reg_tag_2">第二识别码：</string>
    <string name="reg_get_code">获取验证码</string>
    <string name="reg_contract">同意智能矿工使用协议</string>
    <string name="reg_register">注册</string>
    <string name="join_id">会\u3000 员\u3000 ID</string>

    <string name="empty_view_hint">暂无数据</string>
    <string name="error_view_hint">加载失败</string>
    <string name="no_network_view_hint">网络异常</string>

    <string name="hosting_equipment">设备记录</string>
    <string name="hosting_repair_bill">维修记录</string>

    <string-array name="bank">
        <item>选择发卡银行</item>
        <item>中国工商银行</item>
        <item>中国农业银行 </item>
        <item>中国建设银行</item>
    </string-array>

    <string-array name="currency_type">
        <item>充值类型</item>
        <item>钱包余额</item>
        <item>产品券</item>
        <item>库存额度</item>
    </string-array>
    <string-array name="sp_join_2">
        <item>请选择礼包类型</item>
        <item>VIP会员</item>
        <item>品牌大使</item>
        <item>金牌代理</item>
        <item>钻石代理</item>
        <item>合伙人</item>
    </string-array>


    <!--version 2.0-->
    <!--消息中心-->
    <string name="sly_notice">消息中心</string>
    <string name="notice_new">消息</string>
    <string name="notice_old">公告</string>

    <string name="user_type_mine">我的</string>
    <string name="user_type_miner">矿工</string>
    <string name="user_type_master">矿场主</string>
    <string name="user_type_operation">运维</string>
    <string name="master_auth_account">授权账号</string>

    <!--维修单-->
    <string name="repair_bill">维修单</string>
    <string name="repair_untreated">未处理</string>
    <string name="repair_confirming">待确认</string>
    <string name="repair_treating">处理中</string>
    <string name="repair_treated">已处理</string>

    <string name="repair_check">查询</string>
    <string name="repair_details">维修详情</string>
    <string name="repair_form">维修报单</string>
    <string name="repair_deal">已解决</string>
    <string name="repair_refuse_time">拒绝时间</string>
    <string name="repair_history">历史维修记录</string>
    <string name="machine_list">矿机列表</string>
    <string name="machine_start">启用</string>
    <string name="machine_stop">停机</string>
    <string name="machine_cancel">注销</string>
    <string name="manage_machine">管理矿机</string>
    <string name="machine_change_pool">修改矿池</string>

    <string name="machine_goline">矿机上线</string>
    <string name="machine_scaned">已执行扫描</string>
    <string name="machine_no_scaned">未执行扫描</string>

    <string name="machine_scan_details">扫描详情</string>
    <string name="machine_edit">编辑</string>
    <string name="machine_manage">管理</string>
    <string name="machine_finish">完成</string>
    <string name="machine_no_bind">未绑定</string>
    <string name="machine_bind_vip">绑定会员</string>
    <string name="machine_change_vip">更改绑定</string>

    <string name="machine_offline">矿机停机</string>
    <string name="machine_clock_work">上下班打卡</string>

    <!--矿场主-->
    <string name="machine_ip">IP：</string>
    <string name="machine_month_rate">本月运行率：</string>
    <string name="master_person_manage">人员管理</string>
    <string name="master_spare">配件情况</string>
    <string name="master_free">费用</string>
    <string name="master_power">耗电量</string>
    <string name="master_free_manage">管理费</string>
    <string name="master_free_repair">维修费</string>
    <string name="master_account_exec">账号管理</string>

    <!--矿工-->
    <string name="miner_machine_code">矿机编号</string>
    <string name="miner_repair_free_details">维修费用详情</string>
    <string name="miner_enter_machine_code">请输入矿机编号</string>

    <string name="rmb">¥ </string>


    <!--tips-->
    <string name="repair_than_time">结束时间不能大于起始时间</string>
    <string name="repair_input_repair_description">请输入维修描述</string>
    <string name="repair_input_repair_num_price">请输入数量或单价</string>
    <string name="repair_choose_spares">请选择备件</string>
    <string name="repair_add_spares">请至少添加一种备件</string>
    <string name="repair_loading_spares">备件正在加载...</string>
    <string name="manage_no_chose">请至少选择一个矿机</string>
    <string name="area_no_chose">请至少选择一个区域</string>
    <string name="person_no_chose">请至少选择一个人员</string>
    <string name="vip_no_bind_no_commit">请先绑定会员再提交！</string>
    <string name="bind_vip_success">绑定成功</string>
    <string name="ip_than_before">结束IP不能大于起始IP</string>
    <string name="create_accountexec">创建授权账号</string>
    <string name="input_accountexec">请输入授权账号</string>
    <string name="no_permission">抱歉！您当前没有此权限</string>
    <string name="no_machine_num">您未绑定矿机设备</string>
    <string name="no_reminder">催单成功，30分钟内不可重复执行</string>

    <!--dialog-->
    <string name="comfirm_success">提交成功</string>
    <string name="delete_success">删除成功</string>
    <string name="add_success">添加成功</string>
    <string name="cancel_success">取消成功</string>
    <string name="request_commit_plan">确认是否提交</string>
    <string name="request_delete_plan">确认是否删除</string>
    <string name="request_start_machine">确认是否重新启用</string>
    <string name="request_stop_machine">确认是否停机</string>
    <string name="request_cancel_machine">确认是否注销</string>
    <string name="request_cancel_repair">取消维修后则视为维修结束</string>
    <string name="request_confirm_repair">请确认是否维修</string>
    <string name="dialog_ok">确认</string>
    <string name="dialog_cancel">取消</string>

    <string name="request_data">请求数据...</string>
    <string name="no_data">暂时木有数据哦！</string>
    <string name="out_of_time">会话过期或非法访问</string>

</resources>
