<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/id_rl_foot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_alignParentTop="true"
        android:background="#ccc"/>

    <CheckBox
        android:id="@+id/cb_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15dp"
        android:button="@null"
        android:drawableLeft="@drawable/selector_check_bg"
        android:text="\t全选"/>


    <LinearLayout
        android:id="@+id/id_ll_normal_all_state"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="11dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:layout_marginTop="5dp"
                    android:gravity="right"
                    android:text="@string/total_1"
                    android:textColor="#030303"
                    android:textSize="13sp"/>

                <TextView
                    android:id="@+id/tv_total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="right"
                    android:text="@string/price"
                    android:textColor="#0aaadc"
                    android:textSize="13sp"/>

            </LinearLayout>


            <TextView
                android:id="@+id/tvPostPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:gravity="right"
                android:text="不含运费"
                android:textColor="#030303"
                android:textSize="11sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_buy_submit"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="#0aaadc"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/ac_0"
            android:textColor="#ffffff"
            android:textSize="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_ll_editing_all_state"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="102dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="#5cb6d2"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp"
            android:text="移到收藏"
            android:textColor="@color/white"
            android:textSize="14dp"/>

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="#0aaadc"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp"
            android:text="删除"
            android:textColor="@color/white"
            android:textSize="14dp"/>
    </LinearLayout>
</RelativeLayout>