<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="#FFFFFF">

    <include layout="@layout/main_title"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/sly_line_gray" />
    <ScrollView
        android:layout_width="match_parent"
        android:background="#f2f2f2"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">


            <ImageView
                android:layout_width="164dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="53dp"
                android:src="@drawable/register_logo"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/tv_title_ch"
                    android:layout_gravity="center_horizontal"
                    android:background="#fff">

                    <TextView
                        android:id="@+id/et_name"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:layout_height="match_parent"
                        android:text="@string/reg_name"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="15dp"
                        android:background="@null"
                        android:textSize="15sp"
                        android:hint="请输入姓名"
                        android:textColorHint="#CACACA"/>

                </LinearLayout>

                <LinearLayout
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_below="@+id/tv_title_ch"
                    android:layout_gravity="center_horizontal"
                    android:background="#fff"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:layout_height="match_parent"
                        android:text="@string/reg_tell"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:background="@null"
                        android:hint="请输入手机号码"
                        android:inputType="phone"
                        android:maxLength="15"
                        android:textColorHint="#CACACA"
                        android:textSize="15sp"/>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_below="@+id/tv_title_ch"
                    android:layout_gravity="center_horizontal"
                    android:background="#fff"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:layout_height="match_parent"
                        android:text="@string/reg_tag_1"
                        android:id="@+id/textView10"/>

                    <EditText
                        android:id="@+id/et_tag_1"
                        android:layout_width="fill_parent"
                        android:layout_toEndOf="@+id/textView10"
                        android:layout_height="match_parent"
                        android:layout_toStartOf="@+id/tv_tag_name"
                        android:background="@null"
                        android:hint="请输入第一识别码"
                        android:textColorHint="#CACACA"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/tv_tag_name"
                        android:layout_width="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="15dp"
                        android:gravity="center"
                        android:layout_height="match_parent"/>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_below="@+id/tv_title_ch"
                    android:layout_gravity="center_horizontal"
                    android:background="#fff"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:layout_height="match_parent"
                        android:text="@string/reg_tag_2"/>

                    <EditText
                        android:id="@+id/et_tag_2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="15dp"
                        android:background="@null"
                        android:hint="请输入第二识别码"
                        android:textSize="15sp"
                        android:textColorHint="#CACACA"/>

                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:background="#fff"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:layout_below="@+id/tv_title_ch"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="53dp">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/sly_line_gray" />
                <EditText
                    android:id="@+id/et_tell"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:hint="请输入手机号或邮箱地址"
                    android:textColor="#323232"
                    android:drawablePadding="15dp"
                    android:textSize="15sp"
                    android:paddingLeft="20dp"
                    android:drawableLeft="@drawable/register_user"
                    android:textColorHint="@color/sly_text_999999"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/sly_line_gray" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:layout_below="@+id/rl_usertype"
                android:layout_gravity="center_horizontal"
                android:background="#ffffff">

                <EditText
                    android:id="@+id/et_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:background="@null"
                    android:hint="请设置密码（6-12位字符）"
                    android:inputType="textPassword"
                    android:textColor="#323232"
                    android:drawablePadding="15dp"
                    android:paddingLeft="20dp"
                    android:textColorHint="@color/sly_text_999999"
                    android:textSize="15sp"
                    android:drawableLeft="@drawable/register_password"/>

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/sly_line_gray" />
            <RelativeLayout
                android:id="@+id/rl_password"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:layout_below="@+id/rl_username"
                android:layout_gravity="center_horizontal"
                android:background="#fff">

                <EditText
                    android:id="@+id/et_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="15dp"
                    android:layout_toRightOf="@+id/iv_lock"
                    android:background="@null"
                    android:hint="请输入验证码"
                    android:textSize="15sp"
                    android:drawableLeft="@drawable/register_verification"
                    android:drawablePadding="16dp"
                    android:inputType="number"
                    android:textColor="#000"
                    android:textColorHint="@color/sly_text_999999"/>

                <Button
                    android:id="@+id/btn_send_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/sly_text_blue"
                    android:background="@null"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/reg_get_code"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_consent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:paddingRight="7dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/register_unselected"/>

                <TextView
                    android:id="@+id/tv_consent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:text="@string/reg_contract"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:textColor="#666"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_submit"
                style="@style/default_btn"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="30dp"
                android:text="@string/reg_register"
                android:textSize="17dp"
                android:textColor="#ffffff"
                android:background="@drawable/button_color_selector50"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
